# Vector-Database-with-GPU-Acceleration-for-LLM-Retrieval

./: README.md  docker-compose.yml
coordinator/: main.py  requirements.txt
docker/: Dockerfile.coordinator  Dockerfile.shard
rag_demo/: ask.py  ingest.py
scripts/: bench.py  load.py
shard/: CMakeLists.txt  fallback_numpy_index.py  requirements.txt  server.py
shard/include/: flat_index.hpp
shard/src/: shard_binding.cpp
shard/src/cuda/: flat_kernels.cu
